# fairfruitbot-telegram

./: .env.example  .gitignore  BOT_FEATURES.md  CLAUDE.md  Dockerfile  README.md  REPOSITORY_SUMMARY.md  SALMO_IMPLEMENTATION.md  TYPO_DETECTOR_DEBUG.md  bot.py  docker-compose.yml  fetcher.py  manual_test_authorization.py  pyproject.toml  requirements.txt  simple_verification.py  test_handlers.py  test_modules.py  test_typo_logic.py  test_wrong_group.py
.github/workflows/: build-dockerhub.yml  deploy-dockerhub.yml  promote-dockerhub.yml
data/: arcanas.json  planet_data.json
src/: bot.py  environment.py  utils.py
src/clients/: openai_client.py
src/commands/: __init__.py  command.py  group_summary.py  news.py  salmo.py  sign.py  sign_gpt.py  tarot.py  tarot_gpt.py  typo_detector.py
src/fetchers/: __init__.py  fetcher.py  news_fetcher.py  salmo_fetcher.py  salmo_fetcher_gpt.py  sign_fetcher.py  sign_fetcher_gpt.py  tarot_fetcher.py  tarot_fetcher_gpt.py
src/messaging/: __init__.py  base_message_buffer.py  message_buffer.py  privacy_manager.py
src/modules/: __init__.py  astro_module.py  prediction_module.py  privacy.py  typo_tracker.py  users_module.py
src/tests/: __init__.py  test_base_buffer_integration.py  test_base_message_buffer.py  test_chat_based_authorization.py  test_command_authorization.py  test_environment.py  test_fairfruitbot_telegram.py  test_group_summary.py  test_integration.py  test_issue_16.py  test_message_buffer.py  test_privacy_manager.py  test_salmo.py  test_salmo_standalone.py  (+6 more)
tests/: test_fairfruitbot_telegram.py
utils/: persona_scrape.py
(+2 files in other folders)
