[tool.poetry]
name = "fairfruitbot-telegram"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "4.10.0"
python-telegram-bot = "12.6.1"
requests = "^2.27.1"
python-dotenv = "^0.19.2"
yapf = "^0.32.0"
black = "^23.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
